# sdl2

./: .travis.yml  CMakeLists.txt  README.md  cmakeify.yml
.cdep/examples/cmake/: cmakeify.yml
